[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/Menu/debug_menu_hovered.png" type="Texture" id=1]
[ext_resource path="res://art/Menu/debug_menu_pressed.png" type="Texture" id=2]
[ext_resource path="res://art/Menu/debug_menu_unpressed.png" type="Texture" id=3]
[ext_resource path="res://art/fonts/Naga/OpenType-PS/Naga.otf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[node name="Menu" type="MarginContainer"]
margin_top = 2.0
margin_right = 1021.0
margin_bottom = 431.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1021.0
margin_bottom = 429.0

[node name="MenuOptions" type="GridContainer" parent="VBoxContainer"]
margin_right = 1021.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="NewGame" type="MarginContainer" parent="VBoxContainer/MenuOptions"]
margin_right = 508.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="New Game Button" type="TextureButton" parent="VBoxContainer/MenuOptions/NewGame"]
margin_right = 508.0
margin_bottom = 188.0
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MenuOptions/NewGame"]
margin_top = 80.0
margin_right = 508.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
text = "	New Game"
fit_content_height = true

[node name="CPUMove" type="MarginContainer" parent="VBoxContainer/MenuOptions"]
margin_left = 512.0
margin_right = 1020.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU Move Button" type="TextureButton" parent="VBoxContainer/MenuOptions/CPUMove"]
margin_right = 508.0
margin_bottom = 188.0
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true

[node name="CPU Move Label" type="RichTextLabel" parent="VBoxContainer/MenuOptions/CPUMove"]
margin_top = 80.0
margin_right = 508.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
text = "	CPU Move"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadFEN" type="MarginContainer" parent="VBoxContainer/MenuOptions"]
margin_top = 192.0
margin_right = 508.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadFENButton" type="TextureButton" parent="VBoxContainer/MenuOptions/LoadFEN"]
margin_right = 508.0
margin_bottom = 188.0
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true

[node name="LoadFENLabel" type="RichTextLabel" parent="VBoxContainer/MenuOptions/LoadFEN"]
margin_top = 80.0
margin_right = 508.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
text = "	Load FEN"
fit_content_height = true

[node name="GetFEN" type="MarginContainer" parent="VBoxContainer/MenuOptions"]
margin_left = 512.0
margin_top = 192.0
margin_right = 1020.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GetFENButton" type="TextureButton" parent="VBoxContainer/MenuOptions/GetFEN"]
margin_right = 508.0
margin_bottom = 188.0
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true

[node name="GetFENLabel" type="RichTextLabel" parent="VBoxContainer/MenuOptions/GetFEN"]
margin_top = 80.0
margin_right = 508.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
text = "	Get FEN"
fit_content_height = true

[node name="FENLabel" type="TextEdit" parent="VBoxContainer"]
margin_top = 384.0
margin_right = 1021.0
margin_bottom = 429.0
rect_min_size = Vector2( 0, 45 )
text = "fen goes here"

[connection signal="pressed" from="VBoxContainer/MenuOptions/NewGame/New Game Button" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/CPUMove/CPU Move Button" to="." method="_on_Something_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/LoadFEN/LoadFENButton" to="." method="_on_Load_FEN_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/GetFEN/GetFENButton" to="." method="_on_Get_FEN_Button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/FENLabel" to="." method="_on_FEN_label_focus_entered"]
